# fast-clock

./: Cargo.toml  readme.md
src/: clock_synchronization.rs  lib.rs  std_clocks.rs  tsc.rs
