[package]
name = "fast-clock"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["m-mueller678"]
description = "explicit api for alternatives to std::time::Instant"
repository = "https://github.com/m-mueller678/fast-clockc"
readme = "readme.md"
categories = ["development-tools::profiling","hardware-support","no-std::no-alloc"]
keywords = ["timing","clock","tsc","nanosecond-timing"]

[dependencies]
thiserror = "2.0.12"

[features]
default = ["tsc","std"]
tsc=[]
std=[]